--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,6 @@
 name: 'census'
 version: '1.0'
+config-version: 2
 
 # This setting configures which "profile" dbt uses for this project. Profiles contain
 # database connection information, and should be configured in the  ~/.dbt/profiles.yml file
